--- a/pom.xml
+++ b/pom.xml
@@ -7,12 +7,12 @@
 	<parent>
 		<groupId>org.openhab</groupId>
 		<artifactId>pom-tycho</artifactId>
-		<version>2.3.0-SNAPSHOT</version>
+		<version>2.3.0</version>
 		<relativePath></relativePath>
 	</parent>
 
 	<artifactId>org.openhab.binding.weatherflowsmartweather</artifactId>
-	<version>2.2.0-SNAPSHOT</version>
+	<version>2.3.0-SNAPSHOT</version>
 
 	<name>WeatherFlowSmartWeather Binding</name>
 	<packaging>eclipse-plugin</packaging>
