--- a/pom.xml
+++ b/pom.xml
@@ -4,84 +4,79 @@
 
 	<modelVersion>4.0.0</modelVersion>
 
-	<parent>
-		<groupId>org.openhab</groupId>
-		<artifactId>pom-tycho</artifactId>
-		<version>2.3.0</version>
-		<relativePath></relativePath>
-	</parent>
+    <parent>
+        <groupId>org.openhab</groupId>
+        <artifactId>pom-tycho</artifactId>
+        <version>2.4.0-SNAPSHOT</version>
+        <relativePath/>
+    </parent>
 
 	<artifactId>org.openhab.binding.weatherflowsmartweather</artifactId>
 	<version>2.4.0-SNAPSHOT</version>
-
+    <packaging>eclipse-plugin</packaging>
 	<name>WeatherFlowSmartWeather Binding</name>
-	<packaging>eclipse-plugin</packaging>
 
 	<properties>
 		<report.fail.on.error>false</report.fail.on.error>
-	</properties>
+        <ohc.version>2.4.0-SNAPSHOT</ohc.version>
+    </properties>
 
     <build>
-    <testSourceDirectory>src/test</testSourceDirectory>
+        <testSourceDirectory>src/test</testSourceDirectory>
 
-    <plugins>
-    <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-surefire-plugin</artifactId>
-        <version>2.19.1</version>
-        <executions>
-            <execution>
-                <id>test</id>
-                <phase>test</phase>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.19.1</version>
+                <executions>
+                    <execution>
+                        <id>test</id>
+                        <phase>test</phase>
+                        <configuration>
+                            <includes>
+                                <include>**/*Test.java</include>
+                            </includes>
+                        </configuration>
+                        <goals>
+                            <goal>test</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.5.1</version>
                 <configuration>
-                    <includes>
-                        <include>**/*Test.java</include>
-                    </includes>
+                    <source>1.7</source>
+                    <target>1.7</target>
                 </configuration>
-                <goals>
-                    <goal>test</goal>
-                </goals>
-            </execution>
-        </executions>
-    </plugin>
-    <plugin>
-    <groupId>org.apache.maven.plugins</groupId>
-    <artifactId>maven-compiler-plugin</artifactId>
-    <version>3.5.1</version>
-    <configuration>
-    <source>1.8</source>
-        <target>1.8</target>
-    </configuration>
-        <executions>
-            <execution>
-                <id>compiletests</id>
-                <phase>test-compile</phase>
-                <goals>
-                    <goal>testCompile</goal>
-                </goals>
-            </execution>
-        </executions>
-    </plugin>
-    </plugins>
+                <executions>
+                    <execution>
+                        <id>compiletests</id>
+                        <phase>test-compile</phase>
+                        <goals>
+                            <goal>testCompile</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
     </build>
 
-    <pluginRepositories>
-    <pluginRepository>
-    <id>jcenter</id>
-    <name>JCenter Repository</name>
-    <url>https://jcenter.bintray.com/</url>
-    <releases>
-        <enabled>true</enabled>
-        <updatePolicy>never</updatePolicy>
-    </releases>
-    <snapshots>
-        <enabled>false</enabled>
-    </snapshots>
-    </pluginRepository>
-        <pluginRepository>
-            <id>artifactory</id>
-            <name>JFrog Artifactory Repository</name>
-            <url>https://openhab.jfrog.io/openhab/libs-release</url>
+    <dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.11</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
+
+    <repositories>
+        <!-- releases -->
+        <repository>
             <releases>
                 <enabled>true</enabled>
                 <updatePolicy>never</updatePolicy>
@@ -89,55 +84,47 @@
             <snapshots>
                 <enabled>false</enabled>
             </snapshots>
-        </pluginRepository>
-    </pluginRepositories>
+            <id>jcenter</id>
+            <name>JCenter Repository</name>
+            <url>https://jcenter.bintray.com/</url>
+        </repository>
 
-    <repositories>
-
-    <!-- releases -->
-    <repository>
-        <id>jcenter</id>
-        <name>JCenter Repository</name>
-        <url>https://jcenter.bintray.com/</url>
-        <releases>
-            <enabled>true</enabled>
-            <updatePolicy>never</updatePolicy>
-        </releases>
-        <snapshots>
-            <enabled>false</enabled>
-        </snapshots>
-    </repository>
-
-    <repository>
-        <id>openhab-artifactory-release</id>
-        <name>JFrog Artifactory Repository</name>
-        <url>https://openhab.jfrog.io/openhab/libs-release</url>
-        <releases>
-            <enabled>true</enabled>
-            <updatePolicy>never</updatePolicy>
-        </releases>
-        <snapshots>
-            <enabled>false</enabled>
-        </snapshots>
-    </repository>
-
-    <!-- snapshots -->
-    <repository>
-        <id>openhab-artifactory-snapshot</id>
-        <name>JFrog Artifactory Repository</name>
-        <url>https://openhab.jfrog.io/openhab/libs-snapshot</url>
-        <releases>
-            <enabled>false</enabled>
-        </releases>
-        <snapshots>
-            <enabled>true</enabled>
-            <updatePolicy>always</updatePolicy>
-        </snapshots>
-    </repository>
-
-        <!-- SmartHome p2 repository -->
         <repository>
-            <id>p2-smarthome</id>
+            <releases>
+                <enabled>true</enabled>
+                <updatePolicy>never</updatePolicy>
+            </releases>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+            <id>openhab-artifactory-release</id>
+            <name>JFrog Artifactory Repository</name>
+            <url>https://openhab.jfrog.io/openhab/libs-release</url>
+        </repository>
+
+        <!-- snapshots -->
+        <repository>
+            <releases>
+                <enabled>false</enabled>
+            </releases>
+            <snapshots>
+                <enabled>true</enabled>
+                <updatePolicy>always</updatePolicy>
+            </snapshots>
+            <id>openhab-artifactory-snapshot</id>
+            <name>JFrog Artifactory Repository</name>
+            <url>https://openhab.jfrog.io/openhab/libs-snapshot</url>
+        </repository>
+
+        <!-- SmartHome p2 snapshot repository -->
+        <repository>
+            <releases>
+                <enabled>false</enabled>
+            </releases>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+            <id>p2-smarthome-snapshot</id>
             <url>https://openhab.jfrog.io/openhab/eclipse-smarthome-stable</url>
             <layout>p2</layout>
         </repository>
@@ -148,6 +135,33 @@
             <url>https://dl.bintray.com/openhab/p2/openhab-deps-repo/${ohdr.version}</url>
             <layout>p2</layout>
         </repository>
-
     </repositories>
+
+    <pluginRepositories>
+        <pluginRepository>
+            <releases>
+                <enabled>true</enabled>
+                <updatePolicy>never</updatePolicy>
+            </releases>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+            <id>jcenter</id>
+            <name>JCenter Repository</name>
+            <url>https://jcenter.bintray.com/</url>
+        </pluginRepository>
+        <pluginRepository>
+            <releases>
+                <enabled>true</enabled>
+                <updatePolicy>never</updatePolicy>
+            </releases>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+            <id>artifactory</id>
+            <name>JFrog Artifactory Repository</name>
+            <url>https://openhab.jfrog.io/openhab/libs-release</url>
+        </pluginRepository>
+    </pluginRepositories>
+
 </project>
