--- a/pom.xml
+++ b/pom.xml
@@ -7,8 +7,9 @@
   <parent>
     <groupId>org.openhab.addons.bundles</groupId>
     <artifactId>org.openhab.addons.reactor.bundles</artifactId>
-    <relativePath>../oh3-addons/bundles</relativePath>
-    <version>3.1.0-SNAPSHOT</version>
+    <relativePath>../openhab-addons/bundles</relativePath>
+    <!-- <version>3.0.3-SNAPSHOT</version> -->
+    <version>3.3.0-SNAPSHOT</version>
   </parent>
 
   <artifactId>org.openhab.binding.weatherflowsmartweather</artifactId>
